--- a/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 4.lyx
+++ b/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 4.lyx
@@ -1811,12 +1811,30 @@ Numero de piezas defectuosas en una muestra de tamaño 5
 \end_layout
 
 \begin_layout Itemize
-Se rechazaran en promedio: 
-\begin_inset Formula $E\left(X\right)\cdot100=\frac{3\cdot5}{25}\cdot100=60$
+\begin_inset Formula $Y:$
 \end_inset
 
- lotes.
- PREGUNTAR.
+ 
+\begin_inset Quotes fld
+\end_inset
+
+Numero de lotes rechazados de un total de 100 lotes
+\begin_inset Quotes frd
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $Y\sim B\left(100,\frac{26334}{53130}\right)$
+\end_inset
+
+.
+ 
+\begin_inset Formula $E\left(Y\right)=100\cdot\frac{26334}{53130}\approx49,56$
+\end_inset
+
+.
 \end_layout
 
 \end_deeper
@@ -1897,9 +1915,76 @@ Soluciones
 \end_layout
 
 \begin_layout Enumerate
-PREGUNTAR.
+Sea 
+\begin_inset Formula $f\left(q\right)=q^{4}\left(1-q\right)=q^{4}-q^{5}$
+\end_inset
+
+ con 
+\begin_inset Formula $q\in\left[0,1\right]$
+\end_inset
+
+.
 \end_layout
 
+\begin_deeper
+\begin_layout Itemize
+\begin_inset Formula $f'\left(q\right)=-q^{3}\left(5q-4\right)$
+\end_inset
+
+.
+ 
+\begin_inset Formula $f'\left(q\right)=0\iff q=0\lor q=\frac{4}{5}$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $f''\left(q\right)=12q\text{²}-20q^{3}$
+\end_inset
+
+.
+ 
+\begin_inset Formula $f''\left(0\right)=0$
+\end_inset
+
+.
+ 
+\begin_inset Formula $f''\left(\frac{4}{5}\right)<0\Rightarrow\frac{4}{5}$
+\end_inset
+
+ es máximo local.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $f\left(0\right)=0$
+\end_inset
+
+.
+ 
+\begin_inset Formula $f\left(\frac{4}{5}\right)\approx0,082$
+\end_inset
+
+.
+ 
+\begin_inset Formula $f\left(1\right)=0$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $\therefore$
+\end_inset
+
+ para que la probabilidad hallada en b) sea máxima 
+\begin_inset Formula $q=\frac{4}{5}\iff p=\frac{1}{5}$
+\end_inset
+
+.
+\end_layout
+
+\end_deeper
 \end_deeper
 \begin_layout Enumerate-Resume
 Un 
@@ -2055,6 +2140,10 @@ Número de llantas no defectuosas en
 \end_inset
 
 .
+\begin_inset Newpage pagebreak
+\end_inset
+
+
 \end_layout
 
 \end_deeper
@@ -2422,28 +2511,28 @@ Soluciones
 \end_layout
 
 \begin_layout Itemize
-\begin_inset Formula $\frac{\left(1+3a\right)}{4}\geq0\iff a\geq-1/3$
+\begin_inset Formula $0\leq\frac{\left(1+3a\right)}{4}\leq1\iff-1/3\leq a\leq1$
 \end_inset
 
 .
 \end_layout
 
 \begin_layout Itemize
-\begin_inset Formula $\frac{\left(1-a\right)}{4}\geq0\iff1\geq a$
+\begin_inset Formula $0\leq\frac{\left(1-a\right)}{4}\leq1\iff-3\leq a\leq1$
 \end_inset
 
 .
 \end_layout
 
 \begin_layout Itemize
-\begin_inset Formula $\frac{\left(1+2a\right)}{4}\geq0\iff a\geq-1/2$
+\begin_inset Formula $0\leq\frac{\left(1+2a\right)}{4}\leq1\iff-\frac{1}{2}\leq a\leq\frac{3}{2}$
 \end_inset
 
 .
 \end_layout
 
 \begin_layout Itemize
-\begin_inset Formula $\frac{\left(1-4a\right)}{4}\geq0\iff1/4\geq a$
+\begin_inset Formula $0\leq\frac{\left(1-4a\right)}{4}\leq1\iff-\frac{3}{4}\leq a\leq\frac{1}{4}$
 \end_inset
 
 .
