--- a/4 Ano/Ingenieria del Software I/Soluciones/Practica 2.lyx
+++ b/4 Ano/Ingenieria del Software I/Soluciones/Practica 2.lyx
@@ -14379,7 +14379,7 @@ off
 \align center
 \begin_inset Graphics
 	filename Images/iluminacion.png
-	scale 17
+	scale 22
 
 \end_inset
 
@@ -14481,27 +14481,18 @@ Tiempo de cortesía
 \begin_inset Formula $\approx$
 \end_inset
 
- T.
+ 
+\color purple
+T
+\color inherit
+.
 \end_layout
 
 \begin_layout Standard
 \align center
 \begin_inset Graphics
-	filename Images/aeropuerto1.png
-	scale 50
-	BoundingBox 10bp 0bp 500bp 302bp
-	clip
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\align center
-\begin_inset Graphics
-	filename Images/aeropuerto2.png
-	scale 40
+	filename Images/aeropuerto.png
+	scale 21
 
 \end_inset
 
@@ -14528,10 +14519,6 @@ Solución
 	filename Images/mouse.png
 	scale 40
 
-\end_inset
-
-
-\begin_inset Newpage pagebreak
 \end_inset
 
 
