--- a/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 3.lyx
+++ b/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 3.lyx
@@ -81928,7 +81928,7 @@ Suponemos que el resultado de una tirada no influye en la siguiente.
 \end_deeper
 \begin_layout Enumerate
 Se debe formar una comisión de cuatro personas, elegidas al azar entre las
- siguientes: 
+ siguientes:
 \end_layout
 
 \begin_deeper
@@ -82719,7 +82719,7 @@ Soluciones
 \end_layout
 
 \begin_layout Enumerate
-\begin_inset Formula $P\left(B\right)=\frac{6\cdot6}{6^{5}}=\frac{36}{6^{5}}$
+\begin_inset Formula $P\left(B\right)=\frac{6\cdot5}{6^{5}}=\frac{30}{6^{5}}$
 \end_inset
 
 .
@@ -83394,14 +83394,14 @@ end{venndiagram3sets}
 
 \begin_deeper
 \begin_layout Itemize
-\begin_inset Formula $P\left(A\cup B\right)=P\left(A\right)+P\left(B\right)-P\left(A\cap B\right)=\frac{20}{100}+\frac{16}{100}+\frac{14}{100}=\frac{50}{100}$
+\begin_inset Formula $P\left(A\cup B\right)=P\left(A\right)+P\left(B\right)-P\left(A\cap B\right)=\frac{20}{100}+\frac{16}{100}-\frac{8}{100}=\frac{44}{100}$
 \end_inset
 
 .
 \end_layout
 
 \begin_layout Itemize
-\begin_inset Formula $P\left(A\cap B|A\cup B\right)=\frac{P\left[\left(A\cap B\right)\cap\left(A\cup B\right)\right]}{P\left(A\cup B\right)}=\frac{P\left(A\cap B\right)}{P\left(A\cup B\right)}=\frac{8/100}{50/100}=\frac{8}{50}$
+\begin_inset Formula $P\left(A\cap B|A\cup B\right)=\frac{P\left[\left(A\cap B\right)\cap\left(A\cup B\right)\right]}{P\left(A\cup B\right)}=\frac{P\left(A\cap B\right)}{P\left(A\cup B\right)}=\frac{8/100}{44/100}=\frac{8}{44}$
 \end_inset
 
 .
@@ -84028,7 +84028,7 @@ Soluciones
 \end_layout
 
 \begin_layout Itemize
-\begin_inset Formula $P\left(A\cap\overline{B}\right)=P\left(\overline{\overline{A}\cup B}\right)=1-P\left(\overline{A}\cup B\right)=1-\left[\frac{75}{100}+\frac{75}{100}-\frac{75\cdot74}{9900}\right]=\frac{25\cdot24}{9900}$
+\begin_inset Formula $\text{\ensuremath{P\left(A\cap\overline{B}\right)=P\left(\overline{\overline{A}\cup B}\right)=1-P\left(\overline{A}\cup B\right)=1-\left[\frac{75}{100}+\frac{75}{100}-\frac{75\cdot74}{9900}\right]=\frac{25\cdot24}{9900}}}$
 \end_inset
 
 .
@@ -84993,12 +84993,12 @@ Solución
 \begin_inset Formula 
 \[
 S\begin{cases}
-E & \frac{12}{100}\begin{cases}
-\overline{N} & \frac{90}{100}=P\left(\overline{N}|E\right)\\
+\boldsymbol{E} & \boldsymbol{\frac{12}{100}}\begin{cases}
+\boldsymbol{\overline{N}} & \boldsymbol{\frac{90}{100}=P\left(\overline{N}|E\right)}\\
 N & \frac{10}{100}
 \end{cases}\\
-\overline{E} & \frac{88}{100}\begin{cases}
-\overline{N} & \frac{5}{100}=P\left(\overline{N}|\overline{E}\right)\\
+\boldsymbol{\overline{E}} & \boldsymbol{\frac{88}{100}}\begin{cases}
+\boldsymbol{\overline{N}} & \boldsymbol{\frac{5}{100}=P\left(\overline{N}|\overline{E}\right)}\\
 N & \frac{95}{100}
 \end{cases}
 \end{cases}
@@ -85114,14 +85114,14 @@ Falso:
 
 \begin_deeper
 \begin_layout Itemize
-\begin_inset Formula $P\left(A|B\right)=\frac{1}{4}=\frac{P\left(A\cap B\right)}{1/2}\iff P\left(A\cap B\right)=\frac{1}{8}$
+\begin_inset Formula $P\left(A|B\right)=\frac{1}{4}=\frac{P\left(A\cap B\right)}{1/2}\iff P\left(A\cap B\right)=\frac{4}{8}$
 \end_inset
 
 .
 \end_layout
 
 \begin_layout Itemize
-\begin_inset Formula $\text{\ensuremath{P\left(\overline{A}|\overline{B}\right)=\frac{P\left(\overline{A}\cap\overline{B}\right)}{7/8}=\frac{P\left(\overline{A\cup B}\right)}{7/8}=\frac{1-P\left(A\cup B\right)}{7/8}=\frac{1-\left[\frac{1}{4}+\frac{1}{2}-\frac{1}{4}\right]}{7/8}=\frac{8}{14}\neq\frac{1}{4}}}$
+\begin_inset Formula $\text{\ensuremath{P\left(\overline{A}|\overline{B}\right)=\frac{P\left(\overline{A}\cap\overline{B}\right)}{4/8}=\frac{P\left(\overline{A\cup B}\right)}{4/8}=\frac{1-P\left(A\cup B\right)}{4/8}=\frac{1-\left[\frac{1}{4}+\frac{1}{2}-\frac{1}{8}\right]}{4/8}=\frac{3}{8}\neq\frac{1}{4}}}$
 \end_inset
 
 .
@@ -85129,12 +85129,12 @@ Falso:
 
 \end_deeper
 \begin_layout Enumerate
-Verdadero:
+Falso:
 \end_layout
 
 \begin_deeper
 \begin_layout Itemize
-\begin_inset Formula $P\left(A|B\right)+P\left(A|\overline{B}\right)=\frac{1}{4}+\frac{P\left(A-B\right)}{1/2}=\frac{1}{4}+\frac{1/4-1/8}{1/2}=\frac{1}{4}+\frac{1}{4}=1$
+\begin_inset Formula $P\left(A|B\right)+P\left(A|\overline{B}\right)=\frac{1}{4}+\frac{P\left(A-B\right)}{1/2}=\frac{1}{4}+\frac{1/4-1/8}{1/2}=\frac{2}{4}\neq1$
 \end_inset
 
 .
@@ -85241,7 +85241,10 @@ Soluciones
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset Formula $\text{\ensuremath{P\left(\overline{A}\right)P\left(B\right)=\left[1-P\left(A\right)\right]P\left(B\right)=P\left(B\right)-P\left(A\right)P\left(B\right)=P\left(B-A\right)=P\left(B\cap\overline{A}\right)}}$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Enumerate
@@ -85262,7 +85265,7 @@ Si
 \begin_inset Formula $C$
 \end_inset
 
- son sucesos independientes, demostrar que:
+ son sucesos mutuamente independientes, demostrar que:
 \end_layout
 
 \begin_deeper
@@ -85334,7 +85337,10 @@ Soluciones
 
 \end_deeper
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset Formula $P\left(A\cap\left(B\cap C\right)\right)=P\left(A\cap B\cap C\right)=P\left(A\right)P\left(B\right)P\left(C\right)$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Enumerate
