--- a/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 4.lyx
+++ b/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 4.lyx
@@ -1977,11 +1977,15 @@ Sea
 \begin_inset Formula $\therefore$
 \end_inset
 
- para que la probabilidad hallada en b) sea máxima 
-\begin_inset Formula $q=\frac{4}{5}\iff p=\frac{1}{5}$
+ para que la probabilidad hallada en b) sea máxima debera ser: 
+\begin_inset Formula 
+\[
+q=\frac{4}{5}\iff p=\frac{1}{5}
+\]
+
 \end_inset
 
-.
+
 \end_layout
 
 \end_deeper
@@ -2062,7 +2066,7 @@ Se extrae una llanta del lote
 \begin_inset Quotes fld
 \end_inset
 
-Número de llantas no defectuosas en 8 extracciones
+Número repeticiones necesarias hasta encontrar 5 en buen estado
 \begin_inset Quotes frd
 \end_inset
 
@@ -2078,17 +2082,17 @@ grande
 \begin_inset Quotes frd
 \end_inset
 
-, podemos aproximar la variable con una distribución binomial.
+, podemos aproximar la variable con una distribución de Pascal.
 \end_layout
 
 \begin_deeper
 \begin_layout Standard
-\begin_inset Formula $X\sim B\left(8,\frac{20}{100}\right)$
+\begin_inset Formula $X\sim P\left(5,\frac{80}{100}\right)$
 \end_inset
 
 .
  
-\begin_inset Formula $P\left(X=x\right)=\binom{8}{x}\left(\frac{20}{100}\right)^{x}\left(\frac{80}{100}\right)^{8-x}$
+\begin_inset Formula $P\left(X=x\right)=\binom{x-1}{5-1}\left(\frac{80}{100}\right)^{5}\left(\frac{20}{100}\right)^{x-5}$
 \end_inset
 
 .
@@ -2096,7 +2100,7 @@ grande
 
 \end_deeper
 \begin_layout Itemize
-\begin_inset Formula $\text{\ensuremath{P\left(X=5\right)=\binom{8}{5}\left(\frac{20}{100}\right)^{5}\left(\frac{80}{100}\right)^{8-5}=56\cdot\frac{3200000}{10000000000}\cdot\frac{512000}{1000000}\approx0,009}}$
+\begin_inset Formula $\text{\ensuremath{P\left(X=8\right)=\binom{7}{4}\left(\frac{80}{100}\right)^{5}\left(\frac{20}{100}\right)^{3}=35\cdot\frac{3276800000}{10000000000}\cdot\frac{8000}{1000000}\approx0,917}}$
 \end_inset
 
 .
@@ -2104,39 +2108,7 @@ grande
 
 \end_deeper
 \begin_layout Enumerate
-\begin_inset space ~
-\end_inset
-
-
-\end_layout
-
-\begin_deeper
-\begin_layout Itemize
-\begin_inset Formula $X':$
-\end_inset
-
- 
-\begin_inset Quotes fld
-\end_inset
-
-Número de llantas no defectuosas en 
-\begin_inset Formula $n$
-\end_inset
-
- extracciones
-\begin_inset Quotes frd
-\end_inset
-
-.
-\end_layout
-
-\begin_layout Itemize
-\begin_inset Formula $X'\sim B\left(n,\frac{20}{100}\right)$
-\end_inset
-
-.
- 
-\begin_inset Formula $E\left(X'\right)=\frac{20n}{100}=5\iff n=\frac{500}{20}=25$
+\begin_inset Formula $E\left(X\right)=5/\frac{80}{100}=6,25$
 \end_inset
 
 .
@@ -2146,7 +2118,6 @@ Número de llantas no defectuosas en
 
 \end_layout
 
-\end_deeper
 \end_deeper
 \begin_layout Enumerate-Resume
 El número de moléculas que hay en un 
@@ -2284,7 +2255,43 @@ Solución
 \end_layout
 
 \begin_layout Standard
-COMPLETAR.
+Sean 
+\begin_inset Formula $\lambda$
+\end_inset
+
+ el numero de grietas por metro y 
+\begin_inset Formula $X_{v}:$
+\end_inset
+
+ 
+\begin_inset Quotes fld
+\end_inset
+
+Numero de grietas en 
+\begin_inset Formula $v$
+\end_inset
+
+ metros
+\begin_inset Quotes frd
+\end_inset
+
+, luego:
+\begin_inset Formula 
+\[
+P\left(X_{4}\geq1\right)<\frac{1}{2}\iff1-P\left(X_{4}=0\right)\leq\frac{1}{2}\iff1-\frac{e^{-4\lambda}\left(4\lambda\right)^{0}}{0!}<\frac{1}{2}\iff
+\]
+
+\end_inset
+
+
+\begin_inset Formula 
+\[
+\iff\frac{1}{2}<e^{-4\lambda}\iff\ln\left(\frac{1}{2}\right)<-4\lambda\iff\lambda<-\frac{\ln\left(\frac{1}{2}\right)}{4}\approx0,17328
+\]
+
+\end_inset
+
+
 \end_layout
 
 \end_deeper
@@ -2336,10 +2343,6 @@ Solución
 \end_inset
 
 .
-\begin_inset Newpage pagebreak
-\end_inset
-
-
 \end_layout
 
 \end_deeper
@@ -2735,10 +2738,6 @@ Soluciones
 \end_inset
 
 .
-\begin_inset Newpage pagebreak
-\end_inset
-
-
 \end_layout
 
 \end_deeper
@@ -2997,10 +2996,95 @@ En una fábrica dos máquinas producen el mismo artículo.
 Solución
 \end_layout
 
-\begin_layout Standard
-COMPLETAR.
+\begin_layout Itemize
+\begin_inset Formula $\mathcal{E}:$
+\end_inset
+
+ 
+\begin_inset Quotes fld
+\end_inset
+
+Se extrae una pieza de la producción total
+\begin_inset Quotes frd
+\end_inset
+
+.
 \end_layout
 
+\begin_layout Itemize
+\begin_inset Formula $A=\left\{ \text{La pieza proviene de la maquina A}\right\} $
+\end_inset
+
+.
+ 
+\begin_inset Formula $P\left(A\right)=\frac{2}{3}$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $B=\left\{ \text{La pieza proviene de la maquina B}\right\} $
+\end_inset
+
+.
+ 
+\begin_inset Formula $P\left(B\right)=\frac{1}{3}$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $D=\left\{ \text{La pieza es defectuosa}\right\} $
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $P\left(D\right)=P\left(D|A\right)P\left(A\right)+P\left(D|B\right)P\left(B\right)=\frac{2}{100}\frac{2}{3}+\frac{3}{100}\frac{1}{3}=\frac{7}{300}$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $X:$
+\end_inset
+
+ 
+\begin_inset Quotes fld
+\end_inset
+
+Cantidad de piezas defectuosas en 10 repeticiones independientes del experimento
+\begin_inset Quotes frd
+\end_inset
+
+.
+ 
+\begin_inset Formula $X\sim B\left(10,\frac{7}{300}\right)$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $P\left(X\leq2\right)=p\left(0\right)+p\left(1\right)+p\left(2\right)=$
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Standard
+\begin_inset Formula $=\left(\frac{293}{300}\right)^{10}+10\left(\frac{7}{300}\right)\left(\frac{293}{300}\right)^{9}+45\left(\frac{7}{300}\right)^{2}\left(\frac{293}{300}\right)^{8}\approx0,998$
+\end_inset
+
+.
+\end_layout
+
+\end_deeper
 \end_deeper
 \begin_layout Enumerate
 Un sistema de protección está constituido por 
@@ -3009,7 +3093,11 @@ Un sistema de protección está constituido por
 
  radares que funcionan independientemente.
  La probabilidad de que un radar detecte un cohete que ingrese a la zona
- de protección es 0,9.
+ de protección es 
+\begin_inset Formula $\frac{90}{100}$
+\end_inset
+
+.
  ¿Cuál es el número de radares necesarios para que la probabilidad de detectar
  un cohete que ingrese a la zona de protección sea 0, 999?
 \end_layout
@@ -3138,6 +3226,10 @@ ión.
 \begin_layout Enumerate
 ¿Cuál es la probabilidad de encontrar el quinto aspirante con entrenamiento
  avanzado en programación en la décima entrevista?
+\begin_inset Newpage pagebreak
+\end_inset
+
+
 \end_layout
 
 \begin_layout Paragraph
@@ -3256,8 +3348,11 @@ En cierto punto de una ruta se coloca un dispositivo para contar el número
 \end_inset
 
 .
- El dispositivo puede fallar con una probabilidad 0,01 (se entiende por
- fallar que pase un vehículo y el dispositivo no lo detecte).
+ El dispositivo puede fallar con una probabilidad 
+\begin_inset Formula $\frac{1}{100}$
+\end_inset
+
+ (se entiende por fallar que pase un vehículo y el dispositivo no lo detecte).
 \end_layout
 
 \begin_deeper
@@ -3469,7 +3564,7 @@ Número de piezas defectuosas en un total de 100 piezas
 \end_layout
 
 \begin_layout Itemize
-\begin_inset Formula $X\approx P\left(100,\frac{2}{100}\right)$
+\begin_inset Formula $X\approx P\left(100\cdot\frac{2}{100}\right)$
 \end_inset
 
 .
